# Mynd

./: .gitignore  README.md  install.sh  pyproject.toml  quick_test.py  requirements.txt  test_confidence.py  test_memory_storage.py  test_natural.py
demos/: cross_session_demo.py  memory_test_example.py  practical_memory_test.py  random_ai_test.py
docs/: ARCHITECTURE.md  BUILD_STATUS.md  BUSINESS_PLAN.md  COMPONENTS.md  PROJECT_STRUCTURE.md  QUICK_START.md  SECURITY.md  TESTING_SUMMARY.md
examples/: demo_real_ai.py  real_ai_integration.py  real_ai_integration_gemini.py
scripts/: demo.py  quick_setup.py  run_demos.py  start_web_demo.py  test_web_app.py  test_web_interface.py
src/: __init__.py  cli.py  database.py  main.py  mcp_server.py  models.py  semantic_extractor.py  vector_storage.py  web_app.py
tests/: TEST_OVERVIEW.md  demo_test.py  real_world_demo.py  real_world_test.py  test_claude_integration.py  test_mcp.py  test_results_summary.md
