[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myndai"
version = "0.1.0"
description = "Universal AI memory layer for secure, local context sharing"
authors = [
    {name = "Mynd Team", email = "team@mynd.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "ollama>=0.2.1",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "aiosqlite>=0.19.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.2",
    "websockets>=12.0",
    "cryptography>=41.0.8",
    "pyjwt>=2.8.0",
    "watchdog>=3.0.0",
    "psutil>=5.9.6",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

browser = [
    "chromedriver-autoinstaller>=0.6.2",
]

[project.scripts]
mynd = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true 